removed /gadgetly from endpoints

--- a/views/admin/addProduct.ejs
+++ b/views/admin/addProduct.ejs
@@ -16,7 +16,7 @@
                             <h4>Here you can add product</h4>
                         </div>
                         <div class="card-body">
-                            <form method="post" action="/gadgetly/admin/addproduct" enctype="multipart/form-data" class="add-product" id="ProductForm">
+                            <form method="post" action="/admin/addproduct" enctype="multipart/form-data" class="add-product" id="ProductForm">
                                 <div class="mb-4">
                                     <label for="product_name" class="form-label">Product title</label>
                                     <input type="text" placeholder="Type here" class="form-control" id="product_name" name="product_name" oninput="validateProductName()">
