--- a/views/admin/createcoupon.ejs
+++ b/views/admin/createcoupon.ejs
@@ -12,7 +12,7 @@
                   <h4>Here you can create coupun</h4>
               </div>
               <div class="card-body">
-                  <form method="post" action="/gadgetly/admin/createcoupon"  class="create-coupun" id="CouponForm">
+                  <form method="post" action="/admin/createcoupon"  class="create-coupun" id="CouponForm">
                       <div class="mb-4">
                           <label for="coupon_code" class="form-label">CoupunCode</label>
                           <input type="text" placeholder="Type here" class="form-control" id="coupon_code" name="coupon_code" oninput="">
