--- a/views/admin/otpValidation.ejs
+++ b/views/admin/otpValidation.ejs
@@ -70,7 +70,7 @@
                 <div class="card-body">
                     <h4 class="card-title mb-4">Verify OTP</h4>
                       <h6> Enter the email send to <%=admin.email %></h6>
-                    <form method="post" action="/gadgetly/admin/otpvalidation/?id=<%=admin._id %>">
+                    <form method="post" action="/admin/otpvalidation/?id=<%=admin._id %>">
                         <div class="mb-3">
                             <input name="otp" class="form-control" required placeholder="Enter otp" type="text" >
                         </div> <!-- form-group// -->
