--- a/views/admin/page-account-login.ejs
+++ b/views/admin/page-account-login.ejs
@@ -57,7 +57,7 @@
             <div class="card mx-auto card-login">
                 <div class="card-body">
                     <h4 class="card-title mb-4"> Admin Sign in</h4>
-                    <form method="post" action="/gadgetly/admin/login">
+                    <form method="post" action="/admin/login">
                         <div class="mb-3">
                             <input name="email" class="form-control" placeholder="Username or email" type="text">
                         </div> <!-- form-group// -->
@@ -65,7 +65,7 @@
                             <input name="password" class="form-control" placeholder="Password" type="password">
                         </div> <!-- form-group// -->
                         <div class="mb-3">
-                            <a href="/gadgetly/admin/forget" class="float-end font-sm text-muted">Forgot password?</a>
+                            <a href="/admin/forget" class="float-end font-sm text-muted">Forgot password?</a>
 
                         </div> <!-- form-group form-check .// -->
                         <div class="mb-4">
