--- a/views/admin/passwordUpdate.ejs
+++ b/views/admin/passwordUpdate.ejs
@@ -70,7 +70,7 @@
                 <div class="card-body">
                     <h4 class="card-title mb-4">Change password</h4>
                       <h6> Enter the password you want to  set for<%=admin.email %></h6>
-                    <form method="post" action="/gadgetly/admin/passwordupdate/?id=<%=admin._id %>">
+                    <form method="post" action="/admin/passwordupdate/?id=<%=admin._id %>">
                         <div class="mb-3">
                             <input name="password" class="form-control" required placeholder="Enter new password" type="text" >
                         </div> <!-- form-group// -->
