--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -30,7 +30,7 @@
               <div class="col-lg-4 col-md-6">
                   <div class="widget-about font-md mb-md-5 mb-lg-0">
                       <div class="logo logo-width-1 wow fadeIn animated">
-                          <a href="/gadgetly"><img src="/assets/imgs/theme/FunForge.png" alt="logo"></a>
+                          <a href="/"><img src="/assets/imgs/theme/FunForge.png" alt="logo"></a>
                       </div>
                       <h5 class="mt-20 mb-10 fw-600 text-grey-4 wow fadeIn animated">Contact</h5>
                       <p class="wow fadeIn animated">
@@ -59,7 +59,7 @@
                       <li><a href="#">Delivery Information</a></li>
                       <li><a href="#">Privacy Policy</a></li>
                       <li><a href="#">Terms &amp; Conditions</a></li>
-                      <li><a href="/gadgetly/contact">Contact Us</a></li>
+                      <li><a href="/contact">Contact Us</a></li>
                       <li><a href="#">Support Center</a></li>
                   </ul>
               </div>
@@ -68,11 +68,11 @@
                   <h5 class="widget-title wow fadeIn animated">My Account</h5>
                   <ul class="footer-list wow fadeIn animated">
                       <!-- <li><a href="/">Sign In</a></li> -->
-                      <li><a href="/gadgetly/cart">View Cart</a></li>
-                      <li><a href="/gadgetly/wishlist">My Wishlist</a></li>
-                      <li><a href="/gadgetly/myaccount">My Account</a></li>
-                      <li><a href="/gadgetly/help">Help</a></li>
-                      <li><a href="/gadgetly/wallet">Wallet</a></li>
+                      <li><a href="/cart">View Cart</a></li>
+                      <li><a href="/wishlist">My Wishlist</a></li>
+                      <li><a href="/myaccount">My Account</a></li>
+                      <li><a href="/help">Help</a></li>
+                      <li><a href="/wallet">Wallet</a></li>
                   </ul>
                   <%}%>
               </div>
