--- a/views/user/EditAddress.ejs
+++ b/views/user/EditAddress.ejs
@@ -182,7 +182,7 @@
                               <div class="card-body">
                                   <% if(user && address){ %>
                                   
-                                  <form method="post" action="/gadgetly/editaddress/?id=<%= address._id %>" id="addressForm">
+                                  <form method="post" action="/editaddress/?id=<%= address._id %>" id="addressForm">
                                       <div class="row">
                                           <div class="form-group col-md-12">
                                               <label>AddressName <span class="required">*</span></label>
