--- a/views/user/blockeduser.ejs
+++ b/views/user/blockeduser.ejs
@@ -47,7 +47,7 @@
     <i class="fas fa-ban icon"></i>
     <h2 class="mt-3">Access Denied</h2>
     <p class="message">Sorry, you have been blocked from accessing this website.</p>
-    <a href="/gadgetly" class="btn btn-primary btn-home">Back to Home</a>
+    <a href="/" class="btn btn-primary btn-home">Back to Home</a>
   </div>
 </div>
 
