--- a/views/user/updatePassword.ejs
+++ b/views/user/updatePassword.ejs
@@ -180,7 +180,7 @@
                                         <div class="heading_s1">
                                             <h3 class="mb-30">CHANGE PASSWORD</h3>
                                         </div>
-                                        <form method="post" action="/gadgetly/updatePassword/?id=<%= user._id %>">
+                                        <form method="post" action="/updatePassword/?id=<%= user._id %>">
                                             <div class="form-group">
                                                 <input type="text" required name="password" placeholder="Enter new password" >
                                             </div>
