--- a/views/user/userwallet.ejs
+++ b/views/user/userwallet.ejs
@@ -95,7 +95,7 @@
                     'success'
                 );
   
-                fetch('/gadgetly/add-money', {
+                fetch('/add-money', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
