--- a/views/admin/forgetPassword.ejs
+++ b/views/admin/forgetPassword.ejs
@@ -70,7 +70,7 @@
                 <div class="card-body">
                     <h4 class="card-title mb-4">SEND OTP</h4>
                     <h6>Enter Email</h6>
-                    <form method="post" action="/gadgetly/admin/forget">
+                    <form method="post" action="/admin/forget">
                         <div class="mb-3">
                             <input name="email" class="form-control" placeholder="Enter Email" type="email">
                         </div> <!-- form-group// -->
