--- a/views/admin/referrals.ejs
+++ b/views/admin/referrals.ejs
@@ -11,7 +11,7 @@
       <div class="card-body ">
           <div class="row  ">
               <div class="">
-                  <form method="post" action="/gadgetly/admin/referraledit/?referralId=<%=referral._id%>" id="ReferralForm">
+                  <form method="post" action="/admin/referraledit/?referralId=<%=referral._id%>" id="ReferralForm">
                       <div class="mb-4">
                           <label for="referral_amount" class="form-label">Referral Amount</label>
                           <input type="number" min="0" placeholder="Enter Referral Amount" class="form-control" id="referral_amount" name="referral_amount"  value="<%=referral.referralAmount%>" oninput="validateCategoryName()"/>
