--- a/views/admin/vieworderdetails.ejs
+++ b/views/admin/vieworderdetails.ejs
@@ -71,12 +71,12 @@
             <p class="card-text">Accept or reject the request by clicking on the button.</p>
     
             <!-- Accept Button -->
-            <a href="/gadgetly/admin/allowreturn/?orderId=<%=orderData._id %>" class="btn btn-success mr-2">
+            <a href="/admin/allowreturn/?orderId=<%=orderData._id %>" class="btn btn-success mr-2">
               <i class="fas fa-check"></i> Accept
             </a>
     
             <!-- Reject Button -->
-            <a href="/gadgetly/admin/denyreturn/?orderId=<%=orderData._id %>" class="btn btn-danger">
+            <a href="/admin/denyreturn/?orderId=<%=orderData._id %>" class="btn btn-danger">
               <i class="fas fa-times"></i> Reject
             </a>
           </div>
