--- a/views/layout/adminheader.ejs
+++ b/views/layout/adminheader.ejs
@@ -30,7 +30,7 @@
     <div class="screen-overlay"></div>
     <aside class="navbar-aside" id="offcanvas_aside">
         <div class="aside-top">
-            <a href="index.html" class="brand-wrap">
+            <a href="/admin/home" class="brand-wrap">
                 <img src="/admin-assets/imgs/theme/funforge_logo.jpg" class="logo" alt="Evara Dashboard">
             </a>
             <div>
@@ -40,48 +40,48 @@
         <nav>
             <ul class="menu-aside">
                 <li class="menu-item active">
-                    <a class="menu-link " href="/gadgetly/admin/home"> <i class="icon material-icons md-home"></i>
+                    <a class="menu-link " href="/admin/home"> <i class="icon material-icons md-home"></i>
                         <span class="text">Dashboard</span>
                     </a>
                 </li>
                 <li class="menu-item active">
-                    <a class="menu-link " href="/gadgetly/admin/productList"> <i class="icon material-icons md-shopping_bag"></i>
+                    <a class="menu-link " href="/admin/productList"> <i class="icon material-icons md-shopping_bag"></i>
                         <span class="text">Products</span>
                     </a>
                 </li>
                 <li class="menu-item active">
-                    <a class="menu-link" href="/gadgetly/admin/categories"> <i class="icon material-icons md-store"></i>
+                    <a class="menu-link" href="/admin/categories"> <i class="icon material-icons md-store"></i>
                         <span class="text">Categories</span>
                     </a>
                 </li>
                 
                 <li class="menu-item active">
-                    <a class="menu-link" href="/gadgetly/admin/loadAddProduct"> <i class="icon material-icons md-add_box"></i>
+                    <a class="menu-link" href="/admin/loadAddProduct"> <i class="icon material-icons md-add_box"></i>
                         <span class="text">Add product</span>
                     </a>
                 </li>
                 <li class="menu-item active">
-                    <a class="menu-link" href="/gadgetly/admin/userlist"> <i class="icon material-icons md-person"></i>
+                    <a class="menu-link" href="/admin/userlist"> <i class="icon material-icons md-person"></i>
                         <span class="text">Users</span>
                     </a>
                 </li>
                 <li class="menu-item active">
-                    <a class="menu-link" href="/gadgetly/admin/userorders"> <i class="icon material-icons md-shopping_cart"></i>
+                    <a class="menu-link" href="/admin/userorders"> <i class="icon material-icons md-shopping_cart"></i>
                         <span class="text">UserOrders</span>
                     </a>
                 </li>
                 <li class="menu-item active">
-                    <a class="menu-link" href="/gadgetly/admin/salesreport"> <i class="icon material-icons md-pie_chart"></i>
+                    <a class="menu-link" href="/admin/salesreport"> <i class="icon material-icons md-pie_chart"></i>
                         <span class="text">Salesreport</span>
                     </a>
                 </li>
                 <li class="menu-item active">
-                    <a class="menu-link" href="/gadgetly/admin/coupons"> <i class="icon material-icons md-local_offer"></i>
+                    <a class="menu-link" href="/admin/coupons"> <i class="icon material-icons md-local_offer"></i>
                         <span class="text">Coupuns</span>
                     </a>
                 </li>
                 <li class="menu-item active">
-                    <a class="menu-link" href="/gadgetly/admin/referrals"> <i class=" icon material-icons md-card_giftcard"></i>
+                    <a class="menu-link" href="/admin/referrals"> <i class=" icon material-icons md-card_giftcard"></i>
                         <span class="text">Referrals</span>
                     </a>
                 </li>
@@ -105,7 +105,7 @@
                         <a href="#" class="requestfullscreen nav-link btn-icon"><i class="material-icons md-cast"></i></a>
                     </li>
                     <li>
-                        <a class="btn btn-small btn-outline-danger" href="/gadgetly/admin/logout"><i class="material-icons md-exit_to_app"></i>Logout</a>
+                        <a class="btn btn-small btn-outline-danger" href="/admin/logout"><i class="material-icons md-exit_to_app"></i>Logout</a>
                     </li>
                     <li class="nav-item ml-15">
                          <img class="img-xs rounded-circle" src="/admin-assets/imgs/people/avatar2.jpg" alt="User"></a>
