--- a/views/user/forgetPassword.ejs
+++ b/views/user/forgetPassword.ejs
@@ -180,7 +180,7 @@
                                         <div class="heading_s1">
                                             <h3 class="mb-30">Login</h3>
                                         </div>
-                                        <form method="post" action="/gadgetly/forget">
+                                        <form method="post" action="/forget">
                                             <div class="form-group">
                                                 <input type="text" required name="email" placeholder="Your Email">
                                             </div>
