--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -240,7 +240,7 @@
                             <button class="nav-link" id="nav-tab-three" data-bs-toggle="tab" data-bs-target="#tab-three" type="button" role="tab" aria-controls="tab-three" aria-selected="false">New added</button>
                         </li>
                     </ul> -->
-                    <a href="/gadgetly/shop" class="view-more d-none d-md-flex">View More<i class="fi-rs-angle-double-small-right"></i></a>
+                    <a href="/shop" class="view-more d-none d-md-flex">View More<i class="fi-rs-angle-double-small-right"></i></a>
                 </div>
                 <!--End nav-tabs-->
                 <div >
@@ -252,7 +252,7 @@
                                         <div class="product-cart-wrap mb-30">
                                             <div class="product-img-action-wrap">
                                                 <div class="product-img product-img-zoom">
-                                                    <a href="/gadgetly/productdetail/?id=<%= product._id %>">
+                                                    <a href="/productdetail/?id=<%= product._id %>">
                                                         <img class="default-img" src="/admin-assets/imgs/productImages/<%=product.image[0] %>" alt="">
                                                         <img class="hover-img" src="/admin-assets/imgs/productImages/<%=product.image[1] %>" alt="">
                                                     </a>
@@ -261,9 +261,9 @@
                                                     <a aria-label="Quick view" class="action-btn hover-up" data-bs-toggle="modal" data-bs-target="#quickViewModal">
                                                     <i class="fi-rs-search"></i></a>
                                                     <%if(typeof user != "undefined" && user){ %>
-                                                        <a aria-label="Add To Wishlist" class="action-btn hover-up wish-btn" productId="<%=product._id %>" href="/gadgetly/addwishlist?id=<%=product._id %>"><i class="fi-rs-heart"></i></a>
+                                                        <a aria-label="Add To Wishlist" class="action-btn hover-up wish-btn" productId="<%=product._id %>" href="/addwishlist?id=<%=product._id %>"><i class="fi-rs-heart"></i></a>
                                                     <%}else{ %>
-                                                        <a aria-label="Add To Wishlist" class="action-btn hover-up" productId="<%=product._id %>" href="/gadgetly/login %>"><i class="fi-rs-heart"></i></a>
+                                                        <a aria-label="Add To Wishlist" class="action-btn hover-up" productId="<%=product._id %>" href="/login %>"><i class="fi-rs-heart"></i></a>
                                                     <%} %>
                                                     <a aria-label="Compare" class="action-btn hover-up" href="shop-compare.html"><i class="fi-rs-shuffle"></i></a>
                                                 </div>
@@ -272,16 +272,16 @@
                                                 </div>
                                             </div>
                                             <div class="product-content-wrap">
-                                                <h2><a href="/gadgetly/productdetail/?id=<%= product._id %>"><%= product.productName %></a></h2>
+                                                <h2><a href="/productdetail/?id=<%= product._id %>"><%= product.productName %></a></h2>
                                                 <div class="product-price">
                                                     <span><%= product.salePrice %></span>
                                                     <span class="old-price"> <%= product.productPrice %></span>
                                                 </div>
                                                 <div class="product-action-1 show">
                                                     <%if(typeof user != "undefined" && user){ %>
-                                                        <a aria-label="Add To Cart" class="action-btn hover-up  cart-btn" href="/gadgetly/addtocart/?id=<%= product._id %>"  productId="<%=product._id%>"><i class="fi-rs-shopping-bag-add"></i></a>
+                                                        <a aria-label="Add To Cart" class="action-btn hover-up  cart-btn" href="/addtocart/?id=<%= product._id %>"  productId="<%=product._id%>"><i class="fi-rs-shopping-bag-add"></i></a>
                                                     <% }else{  %>
-                                                        <a aria-label="Add To Cart" class="action-btn hover-up " href="/gadgetly/login"  productId="<%=product._id%>"><i class="fi-rs-shopping-bag-add"></i></a>
+                                                        <a aria-label="Add To Cart" class="action-btn hover-up " href="/login"  productId="<%=product._id%>"><i class="fi-rs-shopping-bag-add"></i></a>
                                                     <% } %>
                                                 </div>
                                             </div>
@@ -316,9 +316,9 @@
                             category.forEach((category)=>{ %>
                                 <div class="card-1">
                                     <figure class=" img-hover-scale overflow-hidden">
-                                        <a href="/gadgetly/shop/?category=<%= category._id%>"><img src="/assets/imgs/shop/category.png" alt=""></a>
+                                        <a href="/shop/?category=<%= category._id%>"><img src="/assets/imgs/shop/category.png" alt=""></a>
                                     </figure>
-                                    <h5><a href="/gadgetly/shop/?category=<%= category._id %>"><%= category.categoryName %></a></h5>
+                                    <h5><a href="/shop/?category=<%= category._id %>"><%= category.categoryName %></a></h5>
                                 </div>
                         <%    })
                         }else{ %>
@@ -339,7 +339,7 @@
                     event.preventDefault();
                     const productId = this.getAttribute('productId');
                     console.log('productId', productId);
-                    const response = await fetch(`/gadgetly/addtocart/?id=${productId}`, {
+                    const response = await fetch(`/addtocart/?id=${productId}`, {
                         method: 'GET'
                     });
                     const productData = await response.json();
@@ -374,7 +374,7 @@
                     event.preventDefault();
                     const productId = this.getAttribute('productId');
                     console.log('productId', productId);
-                    const response = await fetch(`/gadgetly/addwishlist/?id=${productId}`, {
+                    const response = await fetch(`/addwishlist/?id=${productId}`, {
                         method: 'GET'
                     });
                     const productData = await response.json();
