--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -188,7 +188,7 @@
                                                 <input required="" type="password" name="password" placeholder="Password">
                                             </div>
                                             <div class="login_footer form-group">
-                                                <a class="text-muted" href="/gadgetly/forget">Forgot password?</a>
+                                                <a class="text-muted" href="/forget">Forgot password?</a>
                                             </div>
                                             <div class="form-group">
                                                 <button type="submit" class="btn btn-fill-out btn-block hover-up" name="login">Log in</button>
