--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -184,7 +184,7 @@
                                         <p class="mb-50 font-sm">
                                             Your personal data will be used to support your experience throughout this website, to manage access to your account, and for other purposes described in our privacy policy
                                         </p>
-                                        <form method="post" action="/gadgetly/signup" id="signupForm">
+                                        <form method="post" action="/signup" id="signupForm">
                                             <div class="form-group">
                                                 <input type="text" required="true" name="username" placeholder="Username"  id="username"  oninput="validateUsername()">
                                                 <span class="text-warning" id="errorusername"></span>
@@ -254,7 +254,7 @@
                                             <li><a href="#" class="btn btn-facebook hover-up mb-lg-0 mb-sm-4">Login With Facebook</a></li>
                                             <li><a href="#" class="btn btn-google hover-up">Login With Google</a></li>
                                         </ul> -->
-                                        <div class="text-muted text-center">Already have an account? <a href="/gadgetly/login">Sign in now</a></div>
+                                        <div class="text-muted text-center">Already have an account? <a href="/login">Sign in now</a></div>
                                     </div>
                                 </div>
                             </div>
